--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@babel/core": "^7.8.7",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.8.7",
-    "@babel/preset-typescript": "^7.8.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
@@ -29,24 +28,19 @@
     "eslint-loader": "^3.0.3",
     "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
-    "less": "^3.11.1",
-    "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "papaparse": "^5.1.1",
     "sass-loader": "^8.0.2",
-    "style-loader": "^1.1.3",
     "terser-webpack-plugin": "^2.3.5",
     "webpack": "^4.42.0",
     "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
-    "xml-loader": "^1.2.1"
+    "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.7",
-    "jquery": "^3.4.1",
     "lodash": "^4.17.15",
     "normalize.css": "^8.0.1"
   }
