--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "build": "cross-env NODE_ENV=production webpack --mode production",
     "watch": "cross-env NODE_ENV=development webpack --development --watch",
     "start": "cross-env NODE_ENV=development webpack-dev-server --mode development --open",
-    "stats": "webpack --json > stats.json && webpack-bundle-analyzer stats.json"
+    "stats": "webpack --json > stats.json && webpack-bundle-analyzer stats.json",
+    "test": "jest"
   },
   "browserslist": "> 0.25%, not dead",
   "author": "lehius <lehius@dev.com>",
   "license": "ISC",
+  "jest": {
+    "verbose": true
+  },
   "devDependencies": {
     "@babel/core": "^7.8.7",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
@@ -28,6 +32,7 @@
     "eslint-loader": "^3.0.3",
     "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^26.0.1",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
